--- a/demo/sass/partials/_section-features-list.scss
+++ b/demo/sass/partials/_section-features-list.scss
@@ -49,11 +49,14 @@
       font-weight: 600;
       text-transform: uppercase;
       letter-spacing: 1.5px;
+      padding: 20px;
+      display: inline-block;
     }
+
     .desc {
-      padding: 20px 0 0;
       line-height: 1.3;
       letter-spacing: .5px;
+      padding: 10px 0 0;
 
       p + p {
         margin: 20px 0 0;
@@ -62,7 +65,7 @@
 
     .content-col {
       color: white;
-      padding: 50px;
+      padding: 20px 50px 50px;
       z-index: 1;
       position: relative;
 
