--- a/demo/style.css
+++ b/demo/style.css
@@ -134,18 +134,20 @@ section {
   font-size: 30px;
   font-weight: 600;
   text-transform: uppercase;
-  letter-spacing: 1.5px; }
+  letter-spacing: 1.5px;
+  padding: 20px;
+  display: inline-block; }
 
 .section-features .feature-item .desc {
-  padding: 20px 0 0;
   line-height: 1.3;
-  letter-spacing: .5px; }
+  letter-spacing: .5px;
+  padding: 10px 0 0; }
   .section-features .feature-item .desc p + p {
     margin: 20px 0 0; }
 
 .section-features .feature-item .content-col {
   color: white;
-  padding: 50px;
+  padding: 20px 50px 50px;
   z-index: 1;
   position: relative; }
   @media (max-width: 800px) {
